Release 1.0-beta2 - Date not yet decided
===========================================================================

The 1.0-beta2 release ... TODO

This release includes:

- All the great features of releases 1.0-preview1 to 1.0-beta1
- L10nFacade: moved number and date/time parsing and formatting methods
  from UserFacade to L10nFacade
- Moved MoquiDefaultConf.xml from framework/api to framework/impl since it
  contains a lot of implementation-specific configuration


===========================================================================
Release 1.0-beta1 - 01 Apr 2011
===========================================================================

The 1.0-beta1 release is the first feature-complete release for the 1.0
series. Various tools screens that may be included in the 1.0-final release
are not yet complete, but the framework itself is feature-complete.
Following this release the focus for the framework shifts from
implementation to testing and to building applications and tools based on
it (in Moqui Framework, Moqui Mantle, and in other Moqui-based projects).

This release includes:

- All the great features of releases 1.0-preview1 to 1.0-preview3
- Changed UserAccount so that userId is internal/sequenced and a new
  username field is used for auth/login
- Seed data changes to follow the Mantle pattern where enumTypeId is the
  same as entity.relationship.@title for Enumerations
- XML Screens
  - Screen form-list form-list-column support
  - Screen form-single field-layout support
  - Screen form-list pagination (defaults in search-form-inputs)
  - Template for csv render mode (mainly for form-list report-like output)
  - Template for text render mode (for email alternative message, etc)
  - Template for xml render mode (like CSV, but more structured and
    support multiple forms per screen)
  - Support URL parameters for renderMode and pageNoLimit which along with
    the lastStandalone parameter make it easy to reuse screens and forms