@@ -12,6 +12,10 @@ This release includes:
 - All the great features of releases 1.0-preview1 to 1.0-beta1
 - L10nFacade: moved number and date/time parsing and formatting methods
   from UserFacade to L10nFacade
+- TransactionFacade: changed suspend() and resume() methods to better use
+  internal stack of suspended transactions for consistency and a simpler
+  API; also added stack of Exception to track where transactions are
+  suspended for easier finding of lock wait timeout types of errors
 - Moved MoquiDefaultConf.xml from framework/api to framework/impl since it
   contains a lot of implementation-specific configuration
 
